# dumplings

./: .gitignore  README.md  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
migrations/: env.py
migrations/versions/: 87cca538479e_initial.py  9547d96a2510_add_foreign_keys_and_relationships.py
routers/: __init__.py  dumplings.py  prices.py  shops.py
